// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-ack-event Renders \`create-ack-event\` with config data 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Ack
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="container"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex text-xs-center"
          >
            <alarm-general-table-stub
              items="[object Object]"
            />
          </div>
        </div>
        <div
          class="layout row"
        >
          <hr
            class="my-3 v-divider theme--light"
          />
        </div>
        <ack-event-form-stub
          form="[object Object]"
          isnoterequired="true"
        />
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Acknowledge
        </div>
      </button>
      <button
        class="warning v-btn theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Acknowledge and declare ticket
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-ack-event Renders \`create-ack-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Ack
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="container"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex text-xs-center"
          >
            <alarm-general-table-stub
              items="[object Object]"
            />
          </div>
        </div>
        <div
          class="layout row"
        >
          <hr
            class="my-3 v-divider theme--light"
          />
        </div>
        <ack-event-form-stub
          form="[object Object]"
        />
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Acknowledge
        </div>
      </button>
      <button
        class="warning v-btn theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Acknowledge and declare ticket
        </div>
      </button>
    </div>
  </div>
</form>
`;
